fixed sizing and spacing for related links

--- a/src/sections/Footer.css
+++ b/src/sections/Footer.css
@@ -167,4 +167,9 @@
   .nowrap {
     white-space: nowrap;
   }
+
+  span.nowrap {
+    font-size: inherit;
+    margin-bottom: 0;
+  }
 }
